fix drive tree overflow

--- a/assets/sidebar.scss
+++ b/assets/sidebar.scss
@@ -101,6 +101,11 @@
     align-items: center;
     justify-content: flex-end;
   }
+
+  &.screen-height {
+    height: 100vh;
+    overflow: clip;
+  }
 }
 
 .layers-list {
